# zipper

./: .gitmodules  CMakeLists.txt
cmake/: Config.cmake.in
include/zipper/: defs.h
zipper/: zipper.cpp
